# scez

./: .gitignore  README.md  environment.yml  pyproject.toml
.devcontainer/: Dockerfile
.github/workflows/: local.yml  main.yml  python-package.yml  python-publish.yml
scez/: __init__.py  de.py  diffexp.py  preprocess.py  utils.py  visualization.py
scez/tests/: test_scez.py
