[project]
name = "scez"
version = "0.2.0"
description = "Single Cell Analysis, Easy Mode!"
authors = [
	{ name = "Abe Arab", email = "abarbiology@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
classifiers = [
	"License :: OSI Approved :: MIT License"
]
dependencies = [
	"numpy",
	"pandas>=2.1.4,<3.0.0",
	"bottleneck>=1.3.6",
	"tqdm",
	"tomli",
	"matplotlib>=3.7",
	"seaborn>=0.12.2",
	"adjustText>=0.7.3",
	"scanpy>=1.9.6",
	"anndata>=0.8.0",
	"pertpy",
	"adpbulk>=0.1.4",
	"pydeseq2>=0.4.0",
	"blitzgsea>=1.3.0",
]

[project.urls]
Source = "https://github.com/abearab/scez"

[project.optional-dependencies]
test = [
	"pytest",
	"tomli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
